--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'jacoco'
-
 }
 
 group = 'com.cdl.supermarket'
@@ -33,10 +32,14 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport // report is always generated after tests run
+
 }
 
 jacocoTestReport {
     reports {
         csv.enabled true
     }
+    dependsOn test // tests are required to run before generating the report
 }
+
